[gd_scene load_steps=4 format=3 uid="uid://mdfb0dp0k63o"]

[ext_resource type="Script" uid="uid://dvkvolj73q6f1" path="res://scripts/coth_over_paiting.gd" id="1_g3tne"]
[ext_resource type="Texture2D" uid="uid://f3ky70jrph33" path="res://assets/visuals/ART/GMTK game jam 25/cloth over easel .png" id="2_wnqte"]
[ext_resource type="PackedScene" uid="uid://lfwj3udiip6s" path="res://scenes/dialog_box.tscn" id="3_5ak4y"]

[node name="CothOverPaiting" type="Node2D"]
scale = Vector2(5.27103, 3.81552)
script = ExtResource("1_g3tne")

[node name="FirstSprite" type="Sprite2D" parent="."]
position = Vector2(-0.569149, -21.2291)
scale = Vector2(0.374682, 0.643071)
texture = ExtResource("2_wnqte")

[node name="DialogBox" parent="." instance=ExtResource("3_5ak4y")]
position = Vector2(-2.65603, 98.807)
rotation = -0.000650526
scale = Vector2(0.0905909, 0.0901045)
dialog = Array[String](["Remove Cloth?"])

[node name="Yes" type="Button" parent="."]
offset_left = -47.9982
offset_top = 44.2928
offset_right = -13.9982
offset_bottom = 68.2928
scale = Vector2(0.885501, 0.65642)
text = "Yes"

[node name="No" type="Button" parent="."]
offset_left = 14.9876
offset_top = 44.5549
offset_right = 45.9876
offset_bottom = 68.5549
scale = Vector2(0.797215, 0.643151)
text = "No"

[connection signal="pressed" from="Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_no_pressed"]
